exported normals do not correspond with normals shown in viewport #50534

Closed
opened 2017-01-26 21:00:17 +01:00 by Gaia Clary · 8 comments
Member

System Information
Windows/nvidia

Blender Version
Broken: d5cf90f (development version)

Short description of error

The attached blend file contains 2 objects, where the adjacent normals (on object boundaries) are welded by using a data transfer modifier. The viewport shows no seams between the object, so the normals are correct.

  • open attached blend file
  • Export -> Collada
  • Export -> FBX

I tested the Collada file with the Secondlife Importer and found the normals where broken.
I also tested the import back of the FBX file into blender and also the normals where wrong.

Here is the blend file: data_transfer_normals.blend

**System Information** Windows/nvidia **Blender Version** Broken: d5cf90f (development version) **Short description of error** The attached blend file contains 2 objects, where the adjacent normals (on object boundaries) are welded by using a data transfer modifier. The viewport shows no seams between the object, so the normals are correct. * open attached blend file * Export -> Collada * Export -> FBX I tested the Collada file with the Secondlife Importer and found the normals where broken. I also tested the import back of the FBX file into blender and also the normals where wrong. Here is the blend file: [data_transfer_normals.blend](https://archive.blender.org/developer/F440658/data_transfer_normals.blend)
Author
Member

Changed status to: 'Open'

Changed status to: 'Open'
Author
Member

Added subscriber: @GaiaClary

Added subscriber: @GaiaClary
Bastien Montagne was assigned by Gaia Clary 2017-01-26 21:01:15 +01:00
Member

Added subscriber: @TheOnlyJoey

Added subscriber: @TheOnlyJoey
Member

Thanks for the report.
Can you try this with 2.78a as well?
It is always useful to know if this is a regression or not.

Thanks for the report. Can you try this with 2.78a as well? It is always useful to know if this is a regression or not.

@TheOnlyJoey That’s OK, @gaia reported here after we talk on irc, it’s just reminder for me (not really a bug actually, more like a glitch + missing user feedback).

@TheOnlyJoey That’s OK, @gaia reported here after we talk on irc, it’s just reminder for me (not really a bug actually, more like a glitch + missing user feedback).

This issue was referenced by fb2f95c91a

This issue was referenced by fb2f95c91a368d38a0d7714e27047933d6b88baf

This issue was referenced by 11abb13483

This issue was referenced by 11abb1348301b181c313fe9e840edf38958f9849

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#50534
No description provided.