Fix T50534: Part I, cleanup loop normals generated during modifier stack evaluation.

Those could stay around, and be displayed in 3DView even when autosmooth
was disabled (but would not be 'active').